--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fullpage/react-fullpage": "^0.1.2",
     "faker": "^4.1.0",
     "lodash": "^4.17.11",
+    "prop-types": "^15.7.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-redux": "^6.0.0",
